# osu-parsers

./: CMakeLists.txt  README.md
include/osp/: osu_enums.h  vector.h
include/osp/detail/: binary_decoder.h  string_utilities.h
include/osp/osr/: replay_file.h
src/detail/: binary_decoder.cpp
src/osr/: replay_file.cpp
